<resources>
    <string name="app_name">ChatApp</string>
    <string name="enter_your_email_address">Enter your email address</string>

    <string name="no_internet_connection">Không có kết nối internet</string>
    <string name="app_functionality_limited">Chức năng ứng dụng bị hạn chế</string>
    <string name="network_monitoring_active">Đang giám sát kết nối mạng</string>
    <string name="network_monitor_channel_name">Trạng thái kết nối</string>
    <string name="network_monitor_channel_description">Hiển thị thông báo trạng thái kết nối</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_text">Connect friends&#10;<b>EASILY &amp;&#10;QUICKLY</b></string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="hint_password">*********</string>
    <string name="you_type_your_email_and_password_to_login">You type your email and password to login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="you_will_get_a_code_via_email">You will get a code via email.</string>
    <string name="t_t_t_t_t_t_tenter_your_nemail_address">\t\t\t\t\t\t\tEnter your\nemail address</string>
    <string name="enter_your_code">Enter OTP Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="code_invalid">Code Invalid</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="add_friend">Add Friend</string>
    <string name="create_group">Create Group</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="enter_name_group">Enter Name Group</string>
    <string name="add_members_to_group">Add members to group</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="enter_your_n_password">Enter your\n password</string>
    <string name="hint_you_should_enter_hard_password">Hint: You should enter hard password</string>
    <string name="email">Email: </string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_2004">01/01/2004</string>
    <string name="ha_noi_viet_nam">Ha Noi, Viet Nam</string>
    <string name="address">Address:</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="return_to_call">Return to call</string>
    <array name="gender_array">
        <item name="Name">Name</item>
    </array>

</resources>