<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/users_group_two_rounded"
            android:title="@string/group" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_circle"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/hamburger_menu"
            android:title="@string/more" />
    </group>
</menu>
