<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Header Section with Blue Background -->
    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/blue_wave_background"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back to Login Button -->
    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/back_white"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Register Text -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backToLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backToLoginButton" />

    <!-- Enter your mobile phone Text -->

    <!-- SMS Code Text -->

    <TextView
        android:id="@+id/enterPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/enter_your_n_password"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />

    <TextView
        android:id="@+id/enterOTPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hint_you_should_enter_hard_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneText" />

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground">

        <!-- Hàng chứa icon + EditText -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_info"
                android:scaleType="centerInside" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_7sdp"
                android:background="@null"
                android:drawablePadding="8dp"
                android:hint="Your Password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_info"
                android:scaleType="centerInside" />

            <EditText
                android:id="@+id/passwordAgainInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_7sdp"
                android:background="@null"
                android:drawablePadding="8dp"
                android:hint="Type again your password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Gạch ngang -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#333333" />
    </LinearLayout>

    <!-- Progress Overlay -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:src="@drawable/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#24786D" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="Đang xử lý..."
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
